--- a/about.html
+++ b/about.html
@@ -15,6 +15,11 @@
 
     </head>
     <body>
+        <!-- loader -->
+        <section class="loader">
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </section>
+        <!-- header section -->
         <header class="header">
             <div class="container">
                 <div class="navbar">
@@ -38,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <!-- header section ends -->
+        <!-- nav for mobile -->
         <section class="fullscreen__nav" id="burger-menu">
             <nav class="mobile__nav">
                 <ul>
@@ -65,11 +70,8 @@
                     </div>
                     <div class="about__content">
                         <h3>What Makes Our Coffee Special?</h3>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Voluptatibus Qui Ea Ullam, Enim Tempora
-                            Ipsum Fuga Alias Quae Ratione A Officiis Id Temporibus Autem? Quod Nemo Facilis Cupiditate. Ex,
-                            Vel?</p>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Odit Amet Enim Quod Veritatis, Nihil
-                            Voluptas Culpa! Neque Consectetur Obcaecati Sapiente?</p>
+                        <p>We care about coffee! The Coffee Beanery has the highest standards in the industry when it comes to providing the finest coffees in the world. We believe the real artistry in producing the perfect bean is in the right roast for each variety. Our master roaster roasts each of our coffees to the peak of its taste potential — choosing from a wide range of roasts.</p>
+                        <p>The result? Some of our coffees are slightly sweet. Others have a bit of snap. Still others display a complex, earthy flavor. But each one of our fine coffees has its own distinctive flavor components that are enhanced by our roasting expertise</p>
                         <a href="##" class="about-btn">Learn More</a>
                     </div>
                 </div>
@@ -77,7 +79,7 @@
 
         </section>
 
-        <!-- about section ends -->
+        <!-- footer -->
 
         <footer class="footer">
             <div class="icons">
