--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-        <!-- loader -->
+        <!--loader -->
         <section class="loader">
             <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         </section>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <!-- header section ends -->
+        <!-- nav for mobile -->
         <section class="fullscreen__nav" id="burger-menu">
             <nav class="mobile__nav">
                 <ul>
@@ -58,19 +58,17 @@
                 </ul>
             </nav>
         </section>
-        <!-- home section starts  -->
+        <!-- main section starts  -->
         <section class="main section" id="home">
             <div class="container">
                 <div class="content">
                     <h3>FRESH COFFEE IN THE MORNING</h3>
-                    <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Placeat Labore, Sint Cupiditate Distinctio
-                        Tempora Reiciendis.</p>
+                    <p>Coffee is the most consumed drink in the world because it has a unique flavor and a strong aroma</p>
                     <a href="##" class="main-btn">Get Yours Now</a>
                 </div>
             </div>
         </section>
 
-        <!-- home section ends -->
         <!-- footer section starts  -->
         <section class="footer">
             <div class="icons">
@@ -82,7 +80,6 @@
             </div>
             <p>Created By <span>Mr Abdullaev</span> | All Rights Reserved </p>
         </section>
-        <!-- footer section ends -->
     </body>
 
 </html>
