--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,11 @@
 
     </head>
     <body>
+        <!-- loader -->
+        <section class="loader">
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </section>
+        <!-- header section -->
         <header class="header">
             <div class="container">
                 <div class="navbar">
@@ -39,7 +44,7 @@
                 </div>
             </div>
         </header>
-        <!-- header section ends -->
+        <!-- nav for mobile -->
         <section class="fullscreen__nav" id="burger-menu">
             <nav class="mobile__nav">
                 <ul>
@@ -62,7 +67,7 @@
                 <div class="box__container">
                     <div class="box">
                         <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -70,7 +75,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -78,7 +83,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-3.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -86,7 +91,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-4.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -94,7 +99,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-5.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -102,7 +107,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-6.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -110,7 +115,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -118,7 +123,7 @@
                     </div>
                     <div class="box">
                         <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
-                        <h3>Tasty and Healty</h3>
+                        <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
                         </div>
@@ -128,7 +133,7 @@
             </div>
         </section>
 
-        <!-- menu section ends -->
+        <!-- footer -->
 
         <footer class="footer">
             <div class="icons">
