--- a/products.html
+++ b/products.html
@@ -15,6 +15,11 @@
 
     </head>
     <body>
+        <!-- loader -->
+        <section class="loader">
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </section>
+        <!-- header section -->
         <header class="header">
             <div class="container">
                 <div class="navbar">
@@ -38,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <!-- header section ends -->
+        <!-- nav for mobile -->
         <section class="fullscreen__nav" id="burger-menu">
             <nav class="mobile__nav">
                 <ul>
@@ -209,7 +214,7 @@
             </div>
         </section>
 
-        <!-- products section ends -->
+        <!-- footer -->
 
         <footer class="footer">
             <div class="icons">
