--- a/review.html
+++ b/review.html
@@ -16,6 +16,11 @@
 
     </head>
     <body>
+        <!-- loader -->
+        <section class="loader">
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </section>
+        <!-- header section starts -->
         <header class="header">
             <div class="container">
                 <div class="navbar">
@@ -39,7 +44,7 @@
                 </div>
             </div>
         </header>
-        <!-- header section ends -->
+        <!-- nav for mobile -->
         <section class="fullscreen__nav" id="burger-menu">
             <nav class="mobile__nav">
                 <ul>
@@ -65,7 +70,7 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-1.png" alt="pic-1">
                             <h3> John Doe</h3>
@@ -83,10 +88,10 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-2.png" alt="000">
-                            <h3> John Doe</h3>
+                            <h3> Cara Parks</h3>
                         </div>
                         <div class="stars">
                             <i class="fa fa-star"></i>
@@ -101,10 +106,10 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-3.png" alt="000">
-                            <h3> John Doe</h3>
+                            <h3> Dave Thomas</h3>
                         </div>
                         <div class="stars">
                             <i class="fa fa-star"></i>
@@ -120,10 +125,10 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-2.png" alt="pic-1">
-                            <h3> John Doe</h3>
+                            <h3> Sabrina White</h3>
                         </div>
                         <div class="stars">
                             <i class="fa fa-star"></i>
@@ -138,10 +143,10 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-3.png" alt="000">
-                            <h3> John Doe</h3>
+                            <h3> Smith George</h3>
                         </div>
                         <div class="stars">
                             <i class="fa fa-star"></i>
@@ -156,10 +161,10 @@
                         <div class="img">
                             <img src="./images/quote-img.png" alt="000">
                         </div>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                        <p>Coffee interacts with many hormones and neurotransmitters in the body, such as cortisol, acetylcholine, and insulin. These relationships are complex, and often depend on timing, amount, and people’s individual makeup.</p>
                         <div class="review__image">
                             <img src="./images/pic-1.png" alt="000">
-                            <h3> John Doe</h3>
+                            <h3> Jerry Anderson</h3>
                         </div>
                         <div class="stars">
                             <i class="fa fa-star"></i>
@@ -172,7 +177,7 @@
                 </div>
             </div>
         </section>
-        <!-- review section starts  -->
+        <!-- footer -->
 
         <footer class="footer">
             <div class="icons">
