--- a/html/products.html
+++ b/html/products.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <!-- custom css file link  -->
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/script.js" defer></script>
+        <script src="../js/cartForOther.js"></script>
 
     </head>
     <body>
@@ -23,10 +24,10 @@
         <header class="header">
             <div class="container">
                 <div class="navbar">
-                    <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
+                    <a href="../index.html" class="nav__logo"><img src="../images/logo.png" alt="logo"></a>
                     <nav class="header__nav">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="menu.html">Menu</a></li>
                             <li><a class="active" href="products.html">Products</a></li>
@@ -48,7 +49,7 @@
             <nav class="mobile__nav">
                 <ul>
                     <i class="fas fa-window-close" id="close-btn"></i>
-                    <li><a class="mobile__nav-link" href="index.html">Home</a></li>
+                    <li><a class="mobile__nav-link" href="../index.html">Home</a></li>
                     <li><a class="mobile__nav-link" href="about.html">About</a></li>
                     <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
                     <li><a class="mobile__nav-link" href="products.html">Products</a></li>
@@ -73,7 +74,7 @@
                             <a href="##" class="fa fa-eye "></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-1.png" alt="Product-1">
+                            <img src="../images/product-1.png" alt="Product-1">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
@@ -97,7 +98,7 @@
                             <a href="##" class="fa fa-eye"></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-2.png" alt="Product-2">
+                            <img src="../images/product-2.png" alt="Product-2">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
@@ -121,7 +122,7 @@
                             <a href="##" class="fa fa-eye"></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-3.png" alt="Product-3">
+                            <img src="../images/product-3.png" alt="Product-3">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
@@ -146,7 +147,7 @@
                             <a href="##" class="fa fa-eye"></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-1.png" alt="Product-1">
+                            <img src="../images/product-1.png" alt="Product-1">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
@@ -170,7 +171,7 @@
                             <a href="##" class="fa fa-eye"></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-2.png" alt="Product-2">
+                            <img src="../images/product-2.png" alt="Product-2">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
@@ -194,7 +195,7 @@
                             <a href="##" class="fa fa-eye"></a>
                         </div>
                         <div class="img">
-                            <img src="./images/product-3.png" alt="Product-3">
+                            <img src="../images/product-3.png" alt="Product-3">
                         </div>
                         <div class="content">
                             <h3>Fresh Coffee</h3>
