--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!-- custom css file link  -->
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
+        <script src="js/cartForHomePage.js" defer></script>
 
     </head>
     <body>
@@ -27,12 +28,12 @@
                     <nav class="header__nav">
                         <ul>
                             <li><a class="active" href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="menu.html">Menu</a></li>
-                            <li><a href="products.html">Products</a></li>
-                            <li><a href="review.html">Review</a></li>
-                            <li><a href="contacts.html">Contact</a></li>
-                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="html/about.html">About</a></li>
+                            <li><a href="html/menu.html">Menu</a></li>
+                            <li><a href="html/products.html">Products</a></li>
+                            <li><a href="html/review.html">Review</a></li>
+                            <li><a href="html/contacts.html">Contact</a></li>
+                            <li><a href="html/blog.html">Blog</a></li>
                         </ul>
                     </nav>
                     <div class="icons">
@@ -49,12 +50,12 @@
                 <ul>
                     <i class="fas fa-window-close" id="close-btn"></i>
                     <li><a class="mobile__nav-link" href="index.html">Home</a></li>
-                    <li><a class="mobile__nav-link" href="about.html">About</a></li>
-                    <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
-                    <li><a class="mobile__nav-link" href="products.html">Products</a></li>
-                    <li><a class="mobile__nav-link" href="review.html">Review</a></li>
-                    <li><a class="mobile__nav-link" href="contacts.html">Contact</a></li>
-                    <li><a class="mobile__nav-link" href="blog.html">Blog</a></li>
+                    <li><a class="mobile__nav-link" href="html/about.html">About</a></li>
+                    <li><a class="mobile__nav-link" href="html/menu.html">Menu</a></li>
+                    <li><a class="mobile__nav-link" href="html/products.html">Products</a></li>
+                    <li><a class="mobile__nav-link" href="html/review.html">Review</a></li>
+                    <li><a class="mobile__nav-link" href="html/contacts.html">Contact</a></li>
+                    <li><a class="mobile__nav-link" href="html/blog.html">Blog</a></li>
                 </ul>
             </nav>
         </section>
