--- a/html/blog.html
+++ b/html/blog.html
@@ -9,8 +9,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <!-- custom css file link  -->
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/script.js" defer></script>
+        <script src="../js/cartForOther.js" defer></script>
 
     </head>
     <body>
@@ -22,10 +23,10 @@
         <header class="header">
             <div class="container">
                 <div class="navbar">
-                    <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
+                    <a href="../index.html" class="nav__logo"><img src="../images/logo.png" alt="logo"></a>
                     <nav class="header__nav">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="menu.html">Menu</a></li>
                             <li><a href="products.html">Products</a></li>
@@ -47,7 +48,7 @@
             <nav class="mobile__nav">
                 <ul>
                     <i class="fas fa-window-close" id="close-btn"></i>
-                    <li><a class="mobile__nav-link" href="index.html">Home</a></li>
+                    <li><a class="mobile__nav-link" href="../index.html">Home</a></li>
                     <li><a class="mobile__nav-link" href="about.html">About</a></li>
                     <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
                     <li><a class="mobile__nav-link" href="products.html">Products</a></li>
@@ -66,7 +67,7 @@
                 <div class="box__container">
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-1.jpeg" alt="blog-1">
+                            <img src="../images/blog-1.jpeg" alt="blog-1">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
@@ -77,7 +78,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-2.jpeg" alt="blog-2">
+                            <img src="../images/blog-2.jpeg" alt="blog-2">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
@@ -88,7 +89,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-3.jpeg" alt="blog-3">
+                            <img src="../images/blog-3.jpeg" alt="blog-3">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
@@ -101,7 +102,7 @@
                 <div class="box__container">
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-2.jpeg" alt="blog-1">
+                            <img src="../images/blog-2.jpeg" alt="blog-1">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
@@ -112,7 +113,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-3.jpeg" alt="blog-2">
+                            <img src="../images/blog-3.jpeg" alt="blog-2">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
@@ -123,7 +124,7 @@
                     </div>
                     <div class="box">
                         <div class="image">
-                            <img src="./images/blog-1.jpeg" alt="blog-3">
+                            <img src="../images/blog-1.jpeg" alt="blog-3">
                         </div>
                         <div class="blog__content">
                             <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
