--- a/html/menu.html
+++ b/html/menu.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <!-- custom css file link  -->
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js" defer></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/script.js" defer></script>
+        <script src="../js/cartForOther.js"></script>
 
     </head>
     <body>
@@ -23,10 +24,10 @@
         <header class="header">
             <div class="container">
                 <div class="navbar">
-                    <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
+                    <a href="../index.html" class="nav__logo"><img src="../images/logo.png" alt="logo"></a>
                     <nav class="header__nav">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a class="active" href="menu.html">Menu</a></li>
                             <li><a href="products.html">Products</a></li>
@@ -48,7 +49,7 @@
             <nav class="mobile__nav">
                 <ul>
                     <i class="fas fa-window-close" id="close-btn"></i>
-                    <li><a class="mobile__nav-link" href="index.html">Home</a></li>
+                    <li><a class="mobile__nav-link" href="../index.html">Home</a></li>
                     <li><a class="mobile__nav-link" href="about.html">About</a></li>
                     <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
                     <li><a class="mobile__nav-link" href="products.html">Products</a></li>
@@ -65,7 +66,7 @@
                 <h1 class="heading">OUR <span>MENU</span></h1>
                 <div class="box__container">
                     <div class="box">
-                        <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-1.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -73,7 +74,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-2.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -81,7 +82,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-3.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-3.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -89,7 +90,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-4.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-4.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -97,7 +98,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-5.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-5.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -105,7 +106,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-6.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-6.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -113,7 +114,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-2.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
@@ -121,7 +122,7 @@
                         <a href="##" class="btn">Add To Cart</a>
                     </div>
                     <div class="box">
-                        <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
+                        <img src="../images/menu-1.png" alt="menu-img" class="menu-img">
                         <h3>Tasty and Healthy</h3>
                         <div class="price">
                             $15.99 <span>20.99</span>
